# smart-sys-buddy

./: package-lock.json  package.json
public/downloads/ai-system-agent/: INSTALL.md  README.md  index.html  install.ps1  install.sh  package.json
public/downloads/ai-system-agent/.github/workflows/: build.yml
public/downloads/ai-system-agent/src/: App.tsx  index.css  store.ts
public/downloads/ai-system-agent/src-tauri/: Cargo.toml  tauri.conf.json
public/downloads/ai-system-agent/src-tauri/src/: ai_client.rs  commands.rs  config.rs  main.rs  security.rs
public/downloads/ai-system-agent/src/components/: AISidebar.tsx  Chat.tsx  CodeEditor.tsx  CommandQueue.tsx  ExtensionManager.tsx  Settings.tsx  Sidebar.tsx  Terminal.tsx
src/: App.tsx  index.css
src/components/: ThemeProvider.tsx  ThemeToggle.tsx
src/pages/: Docs.tsx  Index.tsx  Releases.tsx  SourceCode.tsx
