[package]
name = "ai-system-agent"
version = "1.0.0"
description = "AI-powered system automation agent with explicit user consent"
authors = ["AI System Agent Team"]
license = "MIT"
repository = "https://github.com/ai-system-agent/ai-system-agent"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all", "process-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
keyring = "2.0"
directories = "5.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
